package Project_Pbo_1;

public class Romo implements gaji {
    double gajiPokok;
    @Override
    public double gajiPokokk() {
        return gajiPokok;
    }

    @Override
    public double gajiTotal() {
        return gajiPokokk();
    }
}
