package Project_Pbo_1;

public interface Tunjangan {
    double tunjanganKaryawan();

}
