package Project_Pbo_1;

public class Umat extends pastoran {

}
