@startuml
'https://plantuml.com/class-diagram

class pastoran{
- nama , nip , alamat , domisili : String
~getNama():String
~setNama(nama : String):void
~getDomisili():String
~setDomisili(domisili : String) : void
~getAlamat():String
~setAlamat(alamat : String):void
~getNip():String
~setNip(nip : String):void
}

abstract class Karyawan{
+<<abstract>>setGajiPokok(gajiPokok : double)
+<<abstract>>gajiPokokk()
+<<abstract>>gajiTotal()
}

class Sekretaris{
-gajiPokok , tunjangan = 150000
-jumlahAnak : int
~Sekretaris()
+gajiPokok():double
+gajiTotal():double
+tunjanganAnak():double
}

class Umat{


}

interface Jabatan{
~jabatan() : String
}


class Romo{
+gajiPokokk():double
+gajiTotal():double
+double gajiTotal():double
}

class Koster{
-gajiPokok , tunjangan = 100000
-jumlahAnak : int
~Koster()
+gajiPokok():double
+gajiTotal():double
+tunjanganAnak():double
}

interface Tunjangan{
~tunjanganAnak():double
}

class Paroki{
}

class tokoGereja{
-Bayar:double
-lilin , rosario : int
+setjumlahBeliLilin(lilin : int ):void
+setjumlahBeliRosario(rosario : int):void
+getjumlahBeliLilin():int
+getjumlahBeliRosario():int
+totalBayar() :double
+setPembayaran(bayar : double):void
+getPembayaran():double
}

tokoGereja --|> Umat
Jabatan -[dashed]-> Romo
Jabatan -[dashed]> Sekretaris
Jabatan -[dashed]>Koster
Tunjangan -[dashed]->Sekretaris
Tunjangan -[dashed]-> Koster
Umat --|> pastoran
Karyawan --|> pastoran
Romo --|> Karyawan
Sekretaris --|> Karyawan
Koster --|> Karyawan
Paroki --|> pastoran
@enduml